# Ayleid.Logging

./: .gitmodules  CMakeLists.txt  CMakePresets.json
Include/Ayleid/Logging/: CompositeLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp  LogLevel.hpp  Logger.hpp  LoggingDelegate.hpp  ThreadedLogger.hpp
Infrastructure/CMake/: ayleid-install-library-config.cmake
Source/: CMakeLists.txt  CompositeLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  Logger.cpp  ThreadedLogger.cpp  ayleid-logging-config.cmake.in
